--- a/nfo/index.html
+++ b/nfo/index.html
@@ -49,11 +49,9 @@
             </div>
             <div>
                 <label for="rpmLimit">Rate per Minute (Gemini):</label>
-                <small style="display: block; margin-top: -5px; margin-bottom: 5px;">
-                    Note: Adding CC info to your Google account increases free limit to 1000.
-                </small>
                 <input type="number" id="rpmLimit" name="rpmLimit" min="1" value="10" class="rpm-input">
                 <small>Default: 10 (Free tier, no CC Saved)</small>
+                <small style="display: block; margin-top: -5px; margin-bottom: 5px;">Note: Adding CC info to your Google account increases free limit to 1000.</small>
             </div>
             <div>
                 <label for="owmApiKey">OpenWeatherMap API Key:</label><div class="api-key-wrapper">
@@ -66,12 +64,16 @@
                 </small>
             </div>
             <div>
-                <label for="primaryColor">Primary Color:</label>
-                <input type="color" id="primaryColor" name="primaryColor" value="#029ec5">
+                <div class="color-picker-wrapper">
+                    <label for="primaryColor">Primary Color:</label>
+                    <input type="color" id="primaryColor" name="primaryColor" value="#029ec5">
+                </div>
             </div>
             <div>
-                <label for="backgroundColor">Background Color (Content Area):</label>
-                <input type="color" id="backgroundColor" name="backgroundColor" value="#1E1E1E">
+                <div class="color-picker-wrapper">
+                    <label for="backgroundColor">Background Color (Content Area):</label>
+                    <input type="color" id="backgroundColor" name="backgroundColor" value="#1E1E1E">
+                </div>
             </div>
             <button id="saveAppConfig">Save</button>
         </div>
