nfo2go v.2 ConfigPanelTweaks.2

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -65,14 +65,14 @@
             </div>
             <div>
                 <div class="color-picker-wrapper">
-                    <label for="primaryColor">Primary Color:</label>
                     <input type="color" id="primaryColor" name="primaryColor" value="#029ec5">
+                    <label for="primaryColor">Primary Color</label>
                 </div>
             </div>
             <div>
                 <div class="color-picker-wrapper">
-                    <label for="backgroundColor">Background Color (Content Area):</label>
                     <input type="color" id="backgroundColor" name="backgroundColor" value="#1E1E1E">
+                    <label for="backgroundColor">Background Color</label>
                 </div>
             </div>
             <button id="saveAppConfig">Save</button>
