BTC Track Formatting Update

--- a/btc/index.html
+++ b/btc/index.html
@@ -114,6 +114,13 @@
             opacity: 0.8;
         }
 
+        .data-item .label,
+        .data-item .value,
+        .data-item .change {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
         .status-message {
             text-align: center;
             margin-top: 20px;
