--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <td class="project-text-cell">
                         <a href="./snake/" tabindex="-1"> <div>
                                 <h2>Snake VS</h2>
-                                <p><b>Snake VS v1.4</b> - A multiplayer & AI snake game. <b>VS AI:</b> Outlast an AI opponent that speeds up as you level. <b>2 Player:</b> Compete on one device using keyboard (WASD/Arrows) or split-screen touch. <b>Battle Royale:</b> Be the last survivor against 5 AIs with unique behaviors; defeated snakes turn into food. <b>AI Types:</b> Battle Royale AIs have distinct personalities (standard, erratic, defensive, etc.). <b>Controls:</b> P1 uses WASD/Swipe, P2 uses Arrows/Top-Screen. Pause with Spacebar. <b>Tips & Details:</b> Tips & Further detail located in source-code</source-code></p>
+                                <p><b>Snake VS v1.4</b> - A multiplayer & AI snake game. <b>VS AI:</b> Outlast an AI opponent that speeds up as you level. <b>2 Player:</b> Compete on one device using keyboard (WASD/Arrows) or split-screen touch. <b>Battle Royale:</b> Be the last survivor against 5 AIs with unique behaviors; defeated snakes turn into food. <b>AI Types:</b> Battle Royale AIs have distinct personalities (standard, erratic, defensive, etc.). <b>Controls:</b> P1 uses WASD/Swipe, P2 uses Arrows/Top-Screen. Pause with Spacebar. <b>Tips & Details:</b> Tips & Further detail located in source-code</p>
                             </div>
                         </a>
                     </td>
