BTC Track Formatting Update.2

--- a/btc/index.html
+++ b/btc/index.html
@@ -92,13 +92,13 @@
 
         .data-item .label {
             color: #c0c0c0;
-            flex-basis: 45%;
+            flex-basis: 40%; /* Adjusted from 45% to make label column narrower */
             text-align: right;
             padding-right: 10px;
         }
 
         .data-item .value-container {
-            flex-basis: 55%;
+            flex-basis: 60%; /* Adjusted from 55% to accommodate narrower label */
             text-align: left;
             display: flex;
             align-items: baseline; 
