BTC Track v1.3.7.IndexedDB.2

--- a/btc/index.html
+++ b/btc/index.html
@@ -1681,7 +1681,7 @@
         window.lastFetchedHistoricalChartData = null;
 
         // Initial Load
-        document.addEventListener('DOMContentLoaded', () => {
+        document.addEventListener('DOMContentLoaded', async () => {
             await openAppDb(); // Ensure DB is open and upgraded if necessary
             await loadInitialConfigAndData(); // Load config and data from IndexedDB
             applyAccentColor();
