BTC Track v1.3.7.FetchVisual

--- a/btc/index.html
+++ b/btc/index.html
@@ -517,7 +517,10 @@
 
     <div id="insightModal" class="modal">
         <div class="modal-content">
-            <h2 id="insightModalTitle">AI Bitcoin Insight</h2>
+            <h2 id="insightModalTitle">
+                <img src="./icons/512.png" alt="Logo" id="insightModalHeaderLogo">
+                <span id="insightModalTitleText">AI Bitcoin Insight</span>
+            </h2>
             <div id="insightTimestamp" style="font-size: 0.8em; color: #aaa; margin-bottom: 10px; text-align: center; display: none;">
                 <!-- Timestamp will be populated here -->
             </div>
